<resources>
    <string name="app_name">Shoe Store</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Thank you for using out app Shoe Store App Which is helping you to store your shoes data Thank you for using out app Shoe Store App Which is helping you to store your shoes data Thank you for using out app Shoe Store App Which is helping you to store your shoes data Thank you for using out app Shoe Store App Which is helping you to store your shoes data Thank you for using out app Shoe Store App Which is helping you to store your shoes data Thank you for using out app Shoe Store App Which is helping you to store your shoes data Thank you for using out app Shoe Store App Which is helping you to store your shoes data Thank you for using out app Shoe Store App Which is helping you to store your shoes data Thank you for using out app Shoe Store App Which is helping you to store your shoes data Thank you for using out app Shoe Store App Which is helping you to store your shoes data Thank you for using out app Shoe Store App Which is helping you to store your shoes data Thank you for using out app Shoe Store App Which is helping you to store your shoes dataThank you for using out app Shoe Store App Which is helping you to store your shoes data Thank you for using out app Shoe Store App Which is helping you to store your shoes data Thank you for using out app Shoe Store App Which is helping you to store your shoes data Thank you for using out app Shoe Store App Which is helping you to store your shoes data Thank you for using out app Shoe Store App Which is helping you to store your shoes dataThank you for using out app Shoe Store App Which is helping you to store your shoes dataThank you for using out app Shoe Store App Which is helping you to store your shoes dataThank you for using out app Shoe Store App Which is helping you to store your shoes dataThank you for using out app Shoe Store App Which is helping you to store your shoes dataThank you for using out app Shoe Store App Which is helping you to store your shoes dataThank you for using out app Shoe Store App Which is helping you to store your shoes dataThank you for using out app Shoe Store App Which is helping you to store your shoes data Thank you for using out app Shoe Store App Which is helping you to store your shoes data Thank you for using out app Shoe Store App Which is helping you to store your shoes data Thank you for using out app Shoe Store App Which is helping you to store your shoes data Thank you for using out app Shoe Store App Which is helping you to store your shoes dataThank you for using out app Shoe Store App Which is helping you to store your shoes dataThank you for using out app Shoe Store App Which is helping you to store your shoes data</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="View">VIEW</string>
    <string name="company">Company</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="m">You can add , update and delete your shoes data</string>
    <string name="m1">Welcome to Shoes Store which can help you to store shoes data</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_our_shoes_app">Welcome to our Shoes App</string>

</resources>